# injectionshield

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/injectionshield/: __init__.py  _patterns.py  _scanner.py  _types.py
tests/: test_patterns.py  test_sanitize.py  test_scan.py
